--- a/sample_code.ipynb
+++ b/sample_code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,13 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 直接刪除任何含有缺失值的整行資料\n",
     "# HINT：有更好的預處理填補方式嗎？\n",
-    "df_clean = df.dropna()"
+    "df_clean = df.fillna(df.median(numeric_only=True))"
    ]
   },
   {
@@ -57,6 +57,10 @@
     "# 定義要用來預測的特徵欄位\n",
     "# HINT：這串列遺漏了部分特徵，另外，有方法額外加上新的特徵嗎？\n",
     "features = ['weight', 'acceleration', 'model_year', 'cylinders', 'displacement', 'horsepower']\n",
+    "df_clean['weight_per_hp'] = df_clean['weight'] / df_clean['horsepower']\n",
+    "df_clean['displacement_per_cyl'] = df_clean['displacement'] / df_clean['cylinders']\n",
+    "features += ['weight_per_hp', 'displacement_per_cyl']\n",
+    "\n",
     "# 定義我們要預測的目標欄位\n",
     "target = 'mpg'\n",
     "\n",
@@ -74,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -82,16 +86,21 @@
      "output_type": "stream",
      "text": [
       "模型已訓練完成！\n",
-      "訓練誤差 (Train RMSE): 3.4119 MPG\n",
-      "測試誤差 (Test RMSE):  3.8504 MPG\n",
+      "訓練誤差 (Train RMSE): 2.9921 MPG\n",
+      "測試誤差 (Test RMSE):  3.4291 MPG\n",
       "\n",
       "--- 模型學到的關係 ---\n",
-      "特徵 'weight' 的權重: -0.0067\n",
-      "特徵 'acceleration' 的權重: 0.0325\n",
-      "特徵 'model_year' 的權重: 0.7999\n",
-      "特徵 'cylinders' 的權重: 0.3731\n",
-      "特徵 'displacement' 的權重: -0.0031\n",
-      "特徵 'horsepower' 的權重: -0.0095\n"
+      "特徵 'weight' 的權重: -0.0061\n",
+      "特徵 'acceleration' 的權重: -0.2077\n",
+      "特徵 'model_year' 的權重: 0.8717\n",
+      "特徵 'cylinders' 的權重: -4.8108\n",
+      "特徵 'displacement' 的權重: 0.1353\n",
+      "特徵 'horsepower' 的權重: 0.0125\n",
+      "特徵 'weight_per_hp' 的權重: 0.2765\n",
+      "特徵 'displacement_per_cyl' 的權重: -0.8705\n",
+      "特徵 'origin_europe' 的權重: 0.3501\n",
+      "特徵 'origin_japan' 的權重: -0.1455\n",
+      "特徵 'origin_usa' 的權重: -0.2046\n"
      ]
     }
    ],
@@ -145,7 +154,9 @@
     "\n",
     "# 對測試資料進行預處理\n",
     "# HINT：如果前面使用了其他的預處理方式，這邊要如何修改？\n",
-    "df_test = df_test.fillna(0)\n",
+    "df_test = df_test.fillna(df_clean.median(numeric_only=True))\n",
+    "df_test['weight_per_hp'] = df_test['weight'] / df_test['horsepower']\n",
+    "df_test['displacement_per_cyl'] = df_test['displacement'] / df_test['cylinders']\n",
     "\n",
     "# 使用訓練好的模型，對測試資料進行預測\n",
     "predictions = model.predict(df_test[features])\n",
@@ -164,7 +175,7 @@
    "source": [
     "# 6. 報告\n",
     "\n",
-    "姓名：__________ 學號：__________\n",
+    "姓名：_劉嘉芸___ 學號：___111108506____\n",
     "\n",
     "第一部分：準確度分數 (Accuracy Scores) (1分)  \n",
     "我的準確度分數：__________  \n",
@@ -172,13 +183,13 @@
     "第二部分：我的實驗記錄 (My Experiment Log) (3分)  \n",
     "請記錄你做了哪些嘗試來提升分數，至少記錄兩次不同的嘗試。  \n",
     "【實驗 1】  \n",
-    "    我做的修改：__________________________________________________________________________________  \n",
-    "    結果與觀察 (分數變化、心得等)：__________________________________________________________________  \n",
-    "    該次實驗分數： ____________  \n",
+    "    我做的修改：_____將刪除缺失值改成用中位數填補______  \n",
+    "    結果與觀察 (分數變化、心得等)：___如果直接刪除所有缺失值會遺失太多資料，改成中位數之後有所改善____  \n",
+    "    該次實驗分數： _______3.49758_____  \n",
     "【實驗 2】  \n",
-    "    我做的修改：__________________________________________________________________________________  \n",
-    "    結果與觀察 (分數變化、心得等)：__________________________________________________________________  \n",
-    "    該次實驗分數： ____________  \n",
+    "    我做的修改：__加入更多特徵：weight_per_hp（重量除以馬力）,displacement_per_cyl（排氣量除以汽缸數）__  \n",
+    "    結果與觀察 (分數變化、心得等)：___多加一點特徵，分數馬上就降低了，更多特徵的準確度就越好__  \n",
+    "    該次實驗分數： _2.67191_  \n",
     "\n",
     "第三部分：總結與心得 (Conclusion & Reflection) (2分)  \n",
     "請撰寫一段約 50-100 字的心得總結。內容需包含：  \n",
@@ -205,7 +216,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "educloud",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -219,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
