--- a/sample_code.ipynb
+++ b/sample_code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "import numpy as np\n",
     "\n",
     "# 使用 pandas 的 read_csv 函式讀取訓練資料\n",
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +60,8 @@
     "features = ['weight', 'acceleration', 'model_year', 'cylinders', 'displacement', 'horsepower']\n",
     "df_clean['weight_per_hp'] = df_clean['weight'] / df_clean['horsepower']\n",
     "df_clean['displacement_per_cyl'] = df_clean['displacement'] / df_clean['cylinders']\n",
-    "features += ['weight_per_hp', 'displacement_per_cyl']\n",
+    "df_clean['age'] = 2025 - df_clean['model_year']  \n",
+    "features += ['weight_per_hp', 'displacement_per_cyl', 'age']\n",
     "\n",
     "# 定義我們要預測的目標欄位\n",
     "target = 'mpg'\n",
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -86,27 +88,30 @@
      "output_type": "stream",
      "text": [
       "模型已訓練完成！\n",
-      "訓練誤差 (Train RMSE): 2.9921 MPG\n",
-      "測試誤差 (Test RMSE):  3.4291 MPG\n",
+      "訓練誤差 (Train RMSE): 2.9970 MPG\n",
+      "測試誤差 (Test RMSE):  3.4200 MPG\n",
       "\n",
       "--- 模型學到的關係 ---\n",
-      "特徵 'weight' 的權重: -0.0061\n",
-      "特徵 'acceleration' 的權重: -0.2077\n",
-      "特徵 'model_year' 的權重: 0.8717\n",
-      "特徵 'cylinders' 的權重: -4.8108\n",
-      "特徵 'displacement' 的權重: 0.1353\n",
-      "特徵 'horsepower' 的權重: 0.0125\n",
-      "特徵 'weight_per_hp' 的權重: 0.2765\n",
-      "特徵 'displacement_per_cyl' 的權重: -0.8705\n",
-      "特徵 'origin_europe' 的權重: 0.3501\n",
-      "特徵 'origin_japan' 的權重: -0.1455\n",
-      "特徵 'origin_usa' 的權重: -0.2046\n"
+      "特徵 'weight' 的權重: -0.0062\n",
+      "特徵 'acceleration' 的權重: -0.2290\n",
+      "特徵 'model_year' 的權重: 0.4311\n",
+      "特徵 'cylinders' 的權重: -4.9096\n",
+      "特徵 'displacement' 的權重: 0.1356\n",
+      "特徵 'horsepower' 的權重: 0.0192\n",
+      "特徵 'weight_per_hp' 的權重: 0.3086\n",
+      "特徵 'displacement_per_cyl' 的權重: -0.8921\n",
+      "特徵 'age' 的權重: -0.4311\n"
      ]
     }
    ],
    "source": [
     "# 分割訓練集與測試集 (用於本地評估模型好壞)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "#特徵標準化\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
     "# 建立並訓練模型\n",
     "model = LinearRegression()\n",
@@ -137,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -157,6 +162,7 @@
     "df_test = df_test.fillna(df_clean.median(numeric_only=True))\n",
     "df_test['weight_per_hp'] = df_test['weight'] / df_test['horsepower']\n",
     "df_test['displacement_per_cyl'] = df_test['displacement'] / df_test['cylinders']\n",
+    "df_test['age'] = 2025 - df_test['model_year']  \n",
     "\n",
     "# 使用訓練好的模型，對測試資料進行預測\n",
     "predictions = model.predict(df_test[features])\n",
@@ -178,24 +184,24 @@
     "姓名：_劉嘉芸___ 學號：___111108506____\n",
     "\n",
     "第一部分：準確度分數 (Accuracy Scores) (1分)  \n",
-    "我的準確度分數：__________  \n",
+    "我的準確度分數：__2.67191__  \n",
     "\n",
     "第二部分：我的實驗記錄 (My Experiment Log) (3分)  \n",
     "請記錄你做了哪些嘗試來提升分數，至少記錄兩次不同的嘗試。  \n",
     "【實驗 1】  \n",
-    "    我做的修改：_____將刪除缺失值改成用中位數填補______  \n",
-    "    結果與觀察 (分數變化、心得等)：___如果直接刪除所有缺失值會遺失太多資料，改成中位數之後有所改善____  \n",
-    "    該次實驗分數： _______3.49758_____  \n",
+    "    我做的修改：_____將刪除缺失值改成用中位數填補、加入更多特徵：weight_per_hp（重量除以馬力）,displacement_per_cyl（排氣量除以汽缸數）______  \n",
+    "    結果與觀察 (分數變化、心得等)：___如果直接刪除所有缺失值會遺失太多資料，改成中位數之後有所改善、多加一點特徵，分數馬上就降低了，更多特徵的準確度就越好____  \n",
+    "    該次實驗分數： _______2.67191_____  \n",
     "【實驗 2】  \n",
-    "    我做的修改：__加入更多特徵：weight_per_hp（重量除以馬力）,displacement_per_cyl（排氣量除以汽缸數）__  \n",
-    "    結果與觀察 (分數變化、心得等)：___多加一點特徵，分數馬上就降低了，更多特徵的準確度就越好__  \n",
-    "    該次實驗分數： _2.67191_  \n",
+    "    我做的修改：__加入超多其他特徵，然後進行標準化處理__  \n",
+    "    結果與觀察 (分數變化、心得等)：___結果分數沒有比較好，應該是因為新加入的特徵跟原本的有線性相關__  \n",
+    "    該次實驗分數： _2.82220_  \n",
     "\n",
     "第三部分：總結與心得 (Conclusion & Reflection) (2分)  \n",
     "請撰寫一段約 50-100 字的心得總結。內容需包含：  \n",
     "(1) 你認為本次實驗中，提升準確率最有效的修改是什麼。  \n",
     "(2) 這次不斷嘗試與修正的過程，帶給你最大的學習與啟發。  \n",
-    "內容：______________________________________________    "
+    "內容：__在實驗的時候發現特徵工程跟資料前處理的方式最影響準確度，將刪除資料的方法改為用中位數填補分數就變好了但特徵就不是越多越好，如果加入比較不相關的特徵或是有線性關係的特徵，反而準確度會降低。其實做了這麼多次修改，反而一開始的結果是最好的，可見特徵不需要亂加，夠用就好，基本上影響最大的應該是資料前處理。___    "
    ]
   }
  ],
